# windup

./: README.md  shell.nix
frontend/: index.css  index.html  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  robot.rs
